engine-net-2/examples/Errors/FunctionParametersInNumberMismatch.grs
new graph "Rules.grg"

exec { d:double=f() }

quit
